istio/ch5_vs_gw/catalog-deploy-v2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: catalog
    version: v2
  name: catalog-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog
      version: v2
  template:
    metadata:
      labels:
        app: catalog
        version: v2
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: SHOW_IMAGE
              value: "true"
          image: registry.cn-hangzhou.aliyuncs.com/kacker/catalog:v2
          imagePullPolicy: IfNotPresent
          name: catalog
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          securityContext:
            privileged: false
      imagePullSecrets:
        - name: myregistrykey
