istio/ch5_vs_gw/catalog-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: catalog-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        protocol: HTTP
        name: http
        number: 80
      hosts:
        - "catalog.istioinaction.io"
